<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="200dp"
    tools:context=".FirstTaskActivity">



    <LinearLayout
        android:id="@+id/austria"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/austria1"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/austria2"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/austria3"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FF0000"
            android:orientation="horizontal" />


    </LinearLayout>

    <TextView
        android:id="@+id/textAustria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/austria"
        app:layout_constraintEnd_toEndOf="@+id/austria"
        app:layout_constraintStart_toStartOf="@+id/austria"
        app:layout_constraintTop_toBottomOf="@+id/austria"

        />


    <LinearLayout
        android:id="@+id/poland"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/austria"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textPoland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/poland"
        app:layout_constraintEnd_toEndOf="@+id/poland"
        app:layout_constraintStart_toStartOf="@+id/poland"
        app:layout_constraintTop_toBottomOf="@+id/poland" />

    <LinearLayout
        android:id="@+id/italy"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/poland"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:background="#4CAF50"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textItaly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/italy"
        app:layout_constraintEnd_toEndOf="@+id/italy"
        app:layout_constraintStart_toStartOf="@+id/italy"
        app:layout_constraintTop_toBottomOf="@+id/italy" />

    <LinearLayout
        android:id="@+id/columb"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/italy"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:background="#FFEB3B"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="12dp"
            android:background="#3F51B5"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="12dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textColumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/columbia"
        app:layout_constraintEnd_toEndOf="@+id/columb"
        app:layout_constraintStart_toStartOf="@+id/columb"
        app:layout_constraintTop_toBottomOf="@+id/columb" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/madagascar"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAustria">

        <LinearLayout
            android:id="@+id/madagascar1"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/madagascar2"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="#3F51B5"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/madagascar1"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="#FF0000"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/madagascar1"
            app:layout_constraintTop_toBottomOf="@+id/madagascar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textMadagascar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/madagascar"
        app:layout_constraintEnd_toEndOf="@+id/madagascar"
        app:layout_constraintStart_toStartOf="@+id/madagascar"
        app:layout_constraintTop_toBottomOf="@+id/madagascar" />

    <LinearLayout
        android:id="@+id/thailand"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/madagascar"
        app:layout_constraintTop_toBottomOf="@id/textPoland">

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="10dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="#3F51B5"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="10dp"
            android:background="#FF0000"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textThailand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thailand"
        app:layout_constraintEnd_toEndOf="@+id/thailand"
        app:layout_constraintStart_toStartOf="@+id/thailand"
        app:layout_constraintTop_toBottomOf="@+id/thailand" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/denmark"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toEndOf="@id/thailand"
        app:layout_constraintTop_toBottomOf="@id/textItaly">

        <LinearLayout
            android:id="@+id/denmark1"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:background="#FF0000"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/denmark2"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:background="#FF0000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/denmark3"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="#FF0000"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/denmark4"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="#FF0000"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textDenmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/denmark"
        app:layout_constraintEnd_toEndOf="@+id/denmark"
        app:layout_constraintStart_toStartOf="@+id/denmark"
        app:layout_constraintTop_toBottomOf="@+id/denmark" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/swis"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:backgroundTint="#FF0000"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="@id/columb"
        app:layout_constraintEnd_toEndOf="@id/columb"
        app:layout_constraintTop_toBottomOf="@id/textColumb">

        <LinearLayout
            android:id="@+id/swis1"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/swis2"
            android:layout_width="15dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textSwis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/switzerland"
        app:layout_constraintEnd_toEndOf="@+id/swis"
        app:layout_constraintStart_toStartOf="@+id/swis"
        app:layout_constraintTop_toBottomOf="@+id/swis" />

</androidx.constraintlayout.widget.ConstraintLayout>